--- a/app/templates/app/base_layout.html
+++ b/app/templates/app/base_layout.html
@@ -34,6 +34,10 @@
       </div>
     </nav>
     <main>
+      <form action="{% url 'register:logout_view' %}" method="post">
+        {% csrf_token %}
+        <button type="submit">Logout</button>
+      </form>
       <div class="container">
         {% block content %}
         {% endblock %}
