--- a/register/templates/register/login.html
+++ b/register/templates/register/login.html
@@ -5,5 +5,8 @@
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="submit">
+    {% if request.GET.next %}
+      <input type="hidden" name="next" value="{{ request.GET.next }}">
+    {% endif %}
   </form>
 {% endblock %}
