--- a/startFundraiser/templates/startFundraiser/base.html
+++ b/startFundraiser/templates/startFundraiser/base.html
@@ -43,7 +43,7 @@
                             </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                                
+                                  <a class="dropdown-item" href="{% url 'startFundraiser:campaigns' %}">All Campaigns</a>
                                   <a class="dropdown-item" href="{% url 'startFundraiser:creative' %}">Creative</a>
                                   <a class="dropdown-item" href="{% url 'startFundraiser:social' %}">Social</a>
                                   <a class="dropdown-item" href="{% url 'startFundraiser:tech' %}">Tech &amp; Innovation</a>
@@ -51,7 +51,7 @@
                                   <a class="dropdown-item" href="#">Communities</a>
                                 </div>
                         </li>
-                        <li class="nav-item" id="links"><a href="{% url 'startFundraiser:register' %}">Register</a></li>
+                        <li class="nav-item" id="links"><a href="{% url 'register:user_register' %}">SignUp</a></li>
                     </ul>
                 </div>
             </div>
@@ -95,11 +95,39 @@
 
 
         <section>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <br><br><br><br>
+          <div class="main">
+            <h1>Trending Now</h1>
+            <hr>
+            <!-- Portfolio Gallery Grid -->
+              <div class="row">
+                  {% for trends in trending %}
+                    <div class="column">
+                        <div class="content">
+                          <a href = ""><img src="{{trends.thumb.url}}"  style="width:100%"/></a>
+                          <h4> <span class="label label-default">Domain</span></h4>
+                          <h4><a style="color:inherit;" href = "#">{{trends.title}}</a></h4>
+                          
+                          <h6>by</h6> <h5>{{trends.fullname}}</h5>
+
+                        <!--  <p>{{trends.pk}}</p>-->
+                          <p>{{trends.snippept}}</p>
+                          <p>{{trends.date}}</p>
+                          <hr>
+                          <a href="https://api.whatsapp.com/send?phone=&text={{ trends.title }}{{trends.thumb.url }}"><img style="height:25px;width:30px;align:left;" src="{% static 'images/share.jpg' %}" alt="share"></a>
+                          <a href="#"><img style="height:25px;width:25px;align:left;" src="{% static 'images/Capture1.jpg' %}" alt="like"></a>
+                        </div>
+                    </div>
+
+
+                  {% endfor %}
+            <!-- END GRID -->
+              </div>
+            <!-- END MAIN -->
+          </div>
         </section>
+
+
     {% endblock %}
         <!-- scripts -->
 	    <script src="{% static 'startFundraiser/js/jquery.js' %}"></script>
@@ -109,4 +137,3 @@
         <script src="{% static 'startFundraiser/js/script.js' %}"></script>
     </body>
 </html>
-
