--- a/startFundraiser/templates/startFundraiser/base.html
+++ b/startFundraiser/templates/startFundraiser/base.html
@@ -104,17 +104,17 @@
                   {% for trends in trending %}
                     <div class="column">
                         <div class="content">
-                          <a href = ""><img src="{{trends.thumb.url}}"  style="width:100%"/></a>
+                          <a href = ""><img src="{{trends.image.url}}"  style="width:250px;height:450px;"/></a>
                           <h4> <span class="label label-default">Domain</span></h4>
-                          <h4><a style="color:inherit;" href = "#">{{trends.title}}</a></h4>
-                          
-                          <h6>by</h6> <h5>{{trends.fullname}}</h5>
+                          <h4><a style="color:inherit;" href = "{% url 'startFundraiser:campaign_detail' campaign_id=trends.pk %}">{{trends.campaign_Title}}</a></h4>
+
+                          <h6>by</h6> <h5>{{trends.user}}</h5>
 
                         <!--  <p>{{trends.pk}}</p>-->
-                          <p>{{trends.snippept}}</p>
-                          <p>{{trends.date}}</p>
+                          <p>{{trends.overview}}</p>
+
                           <hr>
-                          <a href="https://api.whatsapp.com/send?phone=&text={{ trends.title }}{{trends.thumb.url }}"><img style="height:25px;width:30px;align:left;" src="{% static 'images/share.jpg' %}" alt="share"></a>
+                          <a href="https://api.whatsapp.com/send?phone=&text={{ trends.campaign_Title }}{{trends.image.url }}"><img style="height:25px;width:30px;align:left;" src="{% static 'images/share.jpg' %}" alt="share"></a>
                           <a href="#"><img style="height:25px;width:25px;align:left;" src="{% static 'images/Capture1.jpg' %}" alt="like"></a>
                         </div>
                     </div>
