--- a/startFundraiser/templates/startFundraiser/post.html
+++ b/startFundraiser/templates/startFundraiser/post.html
@@ -1,4 +1,4 @@
-{% extend "startFundraiser/base.html" %}
+{% extends "startFundraiser/base.html" %}
 
 {% block content %}
 <form class="" method="post">
