--- a/startFundraiser/templates/startFundraiser/base.html
+++ b/startFundraiser/templates/startFundraiser/base.html
@@ -46,6 +46,8 @@
                                   <a class="dropdown-item" href="{% url 'startFundraiser:campaigns' %}">All Campaigns</a>
                                   <a class="dropdown-item" href="{% url 'startFundraiser:creative' %}">Creative</a>
                                   <a class="dropdown-item" href="{% url 'startFundraiser:social' %}">Social</a>
+                                  <a class="dropdown-item" href="{% url 'marketplace:products_blog' %}">Marketplace</a>
+                                  <a class="dropdown-item" href="{% url 'marketplace:my_products' %}">My Products</a>
                                   <a class="dropdown-item" href="{% url 'startFundraiser:tech' %}">Tech &amp; Innovation</a>
                                   <div class="dropdown-divider"></div>
                                   <a class="dropdown-item" href="#">Communities</a>
