--- a/startFundraiser/templates/startFundraiser/detail.html
+++ b/startFundraiser/templates/startFundraiser/detail.html
@@ -33,16 +33,9 @@
                      {% endif %}
                      <span class="glyphicon glyphicon-edit"><a href="{% url 'startFundraiser:add_comment' campaign1.id %}" >Comments</a></span>&nbsp;
 
-
-                     <form action="{% url 'startFundraiser:like_camp' %}" method="post">
-                       {% csrf_token %}
-                       {% if is_liked %}
-                        <button type="submit" name="camp_id" value="{{ campaign1.id }}">Like</button>
-                       {% else %}
-                        <button type="submit" name="camp_id" value="{{ campaign1.id }}">Dislike</button>
-                       {% endif %}
-                     </form>
-                     {{ total_likes }} Likes
+                    <div id="like-section">
+                      {% include 'startFundraiser/like_section.html' %}
+                    </div>
 
 
                      <br>
