ui rest payment

--- a/marketplace/templates/marketplace/product_details.html
+++ b/marketplace/templates/marketplace/product_details.html
@@ -1,4 +1,4 @@
-{% extends 'startFundraiser/base.html' %}
+{% extends 'marketplace/test.html' %}
 {% block content %}
 <div class="trend-details">
   <div class="img">
