--- a/marketplace/templates/marketplace/blog.html
+++ b/marketplace/templates/marketplace/blog.html
@@ -1,159 +1,72 @@
+{% extends 'marketplace/test.html' %}
 {% load static from staticfiles %}
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
-.mySlides {display: none;}
-img {vertical-align: middle;}
+{% block content %}
+<!--slider-->
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
-}
-</style>
-</head>
-<body>
-
-
-
-<div class="slideshow-container">
-
-<div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="{% static 'startFundraiser/img/banner01.jpg' %}" style="width:100%">
-  <div class="text">Caption Text</div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="{% static 'startFundraiser/img/banner02.jpg' %}" style="width:100%">
-  <div class="text">Caption Two</div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="{% static 'startFundraiser/img/banner03.jpg' %}" style="width:100%">
-  <div class="text">Caption Three</div>
-</div>
-
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot"></span>
-  <span class="dot"></span>
-  <span class="dot"></span>
-</div>
-
-<div class="main">
-  <h1>products</h1>
-  <hr>
-  <!-- Portfolio Gallery Grid -->
-    <div class="row">
-        {% for product in products %}
-          <div class="column">
-              <div class="content">
-                <a href = ""><img src="{{product.image.url}}"  style="width:100%"/></a>
-                <h4> <span class="label label-default">{{ product_type }}</span></h4>
-                <h4><a style="color:inherit;" href = "{% url 'marketplace:product_details' slug=product.pk %}">{{product.product_title}}</a></h4>
-                <h6>by</h6> <h5>{{product.fullname}}</h5>
-                <p>{{product.snippept}}</p>
-
-
-              </div>
-          </div>
-
-
-        {% endfor %}
-  <!-- END GRID -->
+<div class="slider">
+<ul class="slides">
+  <li>
+    <img src="{% static 'startFundraiser/img/banner01.jpg'%}" alt="asdf"> <!-- random image -->
+    <div class="caption center-align">
+      <h3>This is our big Tagline!</h3>
+      <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
     </div>
-  <!-- END MAIN -->
+  </li>
+  <li>
+    <img src="{% static 'startFundraiser/img/banner01.jpg'%}"> <!-- random image -->
+    <div class="caption left-align">
+      <h3>Left Aligned Caption</h3>
+      <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+    </div>
+  </li>
+  <li>
+    <img src="{% static 'startFundraiser/img/banner01.jpg'%}"> <!-- random image -->
+    <div class="caption right-align">
+      <h3>Right Aligned Caption</h3>
+      <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+    </div>
+  </li>
+  <li>
+    <img src="{% static 'startFundraiser/img/banner01.jpg'%}"> <!-- random image -->
+    <div class="caption center-align">
+      <h3>This is our big Tagline!</h3>
+      <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+    </div>
+  </li>
+</ul>
 </div>
-
+<!--products-->
+<h2>Products</h2>
+<hr>
+<div class="row">
+  {% for product in products %}
+<div class="col s12 m6 l3">
+  <div class="card">
+    <div class="card-image">
+      <img src="{{product.image.url}}" style="width:100%; height:200px;">
+      <span class="card-title"><a style="color:inherit;" href = "{% url 'marketplace:product_details' slug=product.pk %}">{{product.product_title}}</a></span>
+    </div>
+    <div class="card-content">
+    <p>  {{ product.product_type }}</p>
+    <hr>
+      <p>{{product.snippept}}</p>
+      <p>Quantity: Rs.{{product.quantity}}</p>
+      <p>Cost: {{product.cost}}</p>
+    </div>
+    <div class="card-action">
+    <center>  <a href="#">Buy</a></center>
+    </div>
+  </div>
+</div>
+{% endfor %}
+</div>
 <script>
-var slideIndex = 0;
-showSlides();
+$(document).ready(function(){
+    $('.slider').slider({
+      interval: 1500,
+    });
+  });
 
-function showSlides() {
-    var i;
-    var slides = document.getElementsByClassName("mySlides");
-    var dots = document.getElementsByClassName("dot");
-    for (i = 0; i < slides.length; i++) {
-       slides[i].style.display = "none";
-    }
-    slideIndex++;
-    if (slideIndex > slides.length) {slideIndex = 1}
-    for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
-    }
-    slides[slideIndex-1].style.display = "block";
-    dots[slideIndex-1].className += " active";
-    setTimeout(showSlides, 2000); // Change image every 2 seconds
-}
 </script>
 
-</body>
-</html>
+{% endblock %}
