--- a/startFundraiser/templates/startFundraiser/post.html
+++ b/startFundraiser/templates/startFundraiser/post.html
@@ -1,6 +1,8 @@
 {% extends "startFundraiser/base.html" %}
 
 {% block content %}
+{% for post in posts %}
+
 <form class="" id="post_update" method="post">
     {% csrf_token %}
     {{ form.media }}
@@ -8,8 +10,6 @@
     <input type="submit" value="Save">
 </form>
 
-
-
-
+  {% endfor %}
 
 {% endblock %}
