--- a/startFundraiser/templates/startFundraiser/base.html
+++ b/startFundraiser/templates/startFundraiser/base.html
@@ -80,7 +80,7 @@
                         </li>
                         {% if user.is_authenticated %}
                         <li class="nav-item" id="links"><a href="{% url 'register:user_logout' %}">Logout</a></li>
-                        hii {{ request.user }}
+                        Hey {{ request.user }}!
                         {% else %}
                         <li class="nav-item" id="links"><a href="{% url 'register:user_register' %}">SignUp</a></li>
                         <li class="nav-item" id="links"><a href="{% url 'register:user_login' %}">Login</a></li>
