--- a/marketplace/templates/marketplace/cart.html
+++ b/marketplace/templates/marketplace/cart.html
@@ -1,4 +1,4 @@
-{% extends 'startFundraiser/base.html' %}
+{% extends 'marketplace/test.html' %}
 {% block content %}
 <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
