--- a/community/templates/community/joined-group.html
+++ b/community/templates/community/joined-group.html
@@ -1,6 +1,8 @@
-{% extends 'community/base/login-navbar.html' %}
+{% extends 'community/base/login-navbar-mdbs.html' %}
     {% block title %}group detail{% endblock %}
     {% block content %}
+                    <div class="container">
+
 <br><br><br>
     <div class="table-responsive">
         <center>
@@ -29,4 +31,5 @@
 </table>
         </center>
     </div>
+                    </div>
 {% endblock %}
