--- a/community/templates/community/make-group.html
+++ b/community/templates/community/make-group.html
@@ -1,9 +1,11 @@
-{% extends 'community/base/login-navbar.html' %}
+{% extends 'community/base/login-navbar-mdbs.html' %}
     {% block title %}make group{% endblock %}
     {% block content %}
 
-    <br><br><center>
-    <div id="map" style="width:80%; height:50%"></div></center>
+
+    <br><br><br><br><br>
+    <center>
+    <div id="map" class="z-depth-5" style="height:50%"></div></center>
 
     <p>Click on the map to add markers.</p><br><br>
 
@@ -171,6 +173,7 @@
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBoxHIV4EUz3PsPOwB_ehuLLDu4OE0ELLc&callback=initMap">
     </script>
+
    <!-- <script>
 
       // In the following example, markers appear when the user clicks on the map.
