--- a/community/templates/community/profile.html
+++ b/community/templates/community/profile.html
@@ -1,6 +1,8 @@
-{% extends 'community/base/login-navbar.html' %}
+{% extends 'community/base/login-navbar-mdbs.html' %}
     {% block title %}all groups{% endblock %}
     {% block content %}
+                    <div class="container">
+
     <br><br>
     <br><br>
 <div class="jumbotron text-center">
@@ -77,4 +79,5 @@
         </div>
     </center>
 </div>
+                    </div>
 {% endblock %}
