--- a/community/templates/community/group-detail.html
+++ b/community/templates/community/group-detail.html
@@ -1,35 +1,96 @@
 
-{% extends 'community/base/login-navbar.html' %}
+{% extends 'community/base/login-navbar-mdbs.html' %}
     {% block title %}group detail{% endblock %}
     {% block content %}
-            {% for conten in content %}
+                    <div class="container">
 
-                <h3>title :  {{ conten.title }}</h3>
-                <h3>type :  {{ conten.type }}</h3>
-                    <h3>location :  lat:<span id="lat1">{{ conten.lat }}</span>, lon:<span id="lon1">{{ conten.lon }}</span></h3>
-                <h3>address :  {{ conten.address }}</h3>
-                <h3>members :  {{ conten.number }}</h3>
-                <h3>date :  {{ conten.date }}</h3>
+                <br><br><br><br><br>
+                <div class="mt-5">
 
-            {% endfor %}
+                    <div class="row bounce">
+                      <div class="col-md-8 mb-3">
+                          <div class="card card-cascade">
+                              {% for conten in content %}
+
+                                  <h4>title :  {{ conten.title }}</h4>
+                                    <h4>type :  {{ conten.type }}</h4>
+                                        <h4>location :  lat:<span id="lat1">{{ conten.lat }}</span>, lon:<span id="lon1">{{ conten.lon }}</span></h4>
+                                    <h4>address :  {{ conten.address }}</h4>
+                                    <h4>members :  {{ conten.number }}</h4>
+                                    <h4>date :  {{ conten.date }}</h4>
+                              {% endfor %}
+
+                          </div>
+                      </div>
+                      <div class="col-md-4 mb-3">
+                        <p>the weather of the place</p>
+                          <div class="card card-cascade">
+
+                          <!-- Card image -->
+                          <div class="view view-cascade overlay">
+                            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/men.jpg" alt="Card image cap">
+                            <a>
+                              <div class="mask rgba-white-slight"></div>
+                            </a>
+                          </div>
+
+                          <!-- Card content -->
+                          <div class="card-body card-body-cascade text-center">
+
+                            <!-- Title -->
+                            <h4 class="card-title"><strong>Billy Coleman</strong></h4>
+                            <!-- Subtitle -->
+                            <h6 class="font-weight-bold indigo-text py-2">Web developer</h6>
+                            <!-- Text -->
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt, quod quibusdam.
+                            </p>
+
+                            <!-- Facebook -->
+                            <a type="button" class="btn-floating btn-small btn-fb"><i class="fa fa-facebook"></i></a>
+                            <!-- Twitter -->
+                            <a type="button" class="btn-floating btn-small btn-tw"><i class="fa fa-twitter"></i></a>
+                            <!-- Google + -->
+                            <a type="button" class="btn-floating btn-small btn-dribbble"><i class="fa fa-dribbble"></i></a>
+
+                          </div>
+
+                        </div>
+
+                       </div>
+
+                    </div>
+
+
             <center>
                 {% if message %}
                     {{ message }}
                 {% endif %}
+            </center>
                 <form method="POST">
+                    <center>
                     {% csrf_token %}
                     <div class="custom-control custom-radio">
-                    yes: <input type="radio" name="choice" value="yes" class="custom-control-input">
-                    no: <input type="radio" name="choice" value="no" class="custom-control-input"><br><br>
+
+                        <div class="form-check form-check-inline">
+                          <input type="radio" class="form-check-input" value="yes" id="materialInline2" name="choice">
+                          <label class="form-check-label" for="materialInline2">yes</label>
+                        </div>
+
+                        <!-- Material inline 3 -->
+                        <div class="form-check form-check-inline">
+                          <input type="radio" class="form-check-input" id="materialInline3" value="no" name="choice">
+                          <label class="form-check-label" for="materialInline3">no</label>
+                        </div>
+                    <br>
                     <button type="submit" class="btn btn-success">submit</button>
                     </div>
-                   </center>
+            </center>
 
 
                     <br>
-<center><div id="map" style="width: 80%; height: 45%;"></div></center><br>
-<center>
-    <h3>comment</h3> <input type="textarea" name="comment" class="form-control" rows="5" style="width:80%" maxlength="500"><br>
+                <center><div id="map" class="z-depth-5" style="height: 45%;"></div></center><br>
+                <center>
+                    <h3>comment</h3> <input type="textarea" name="comment" class="form-control" rows="5" maxlength="500"><br>
 
                             <button type="submit" class="btn btn-success">submit</button><br><br></center>
 
@@ -37,7 +98,7 @@
                 </form>
     <div class="table-responsive">
         <center>
-    <table border="1" style="width:80%" class="table table-striped table-bordered table-hover">
+        <table border="1" class="table table-striped table-bordered table-hover">
             <tr>
                 <th>Comments
                 </th>
@@ -61,6 +122,7 @@
         var la = document.getElementById('lat1').innerHTML;
         var lo = document.getElementById('lon1').innerHTML;
 
+
             var latlng = {lat: parseFloat(la), lng: parseFloat(lo)};
       var loc = {lat: parseFloat(la), lng: parseFloat(lo)};
       // The map, centered at Uluru
@@ -70,79 +132,10 @@
       var marker = new google.maps.Marker({position: loc, map: map});
     }
         </script>
-<script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBoxHIV4EUz3PsPOwB_ehuLLDu4OE0ELLc&callback=initMap">
-    </script>
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-    <!--<meta charset="UTF-8">-->
-    <!--<title>detail page</title>-->
-    <!--<style>-->
-       <!--/* Set the size of the div element that contains the map */-->
-      <!--#map {-->
-        <!--height: 400px;  /* The height is 400 pixels */-->
-        <!--width: 100%;  /* The width is the width of the web page */-->
-       <!--}-->
-    <!--</style>-->
-<!--</head>-->
-<!--<body>-->
-        <!--{% for conten in content %}-->
+        <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBoxHIV4EUz3PsPOwB_ehuLLDu4OE0ELLc&callback=initMap">
+        </script>
+                </div>
 
-    <!--<h3>title :  {{ conten.title }}</h3>-->
-    <!--<h3>type :  {{ conten.type }}</h3>-->
-        <!--<h3>location :  lat:<span id="lat1">{{ conten.lat }}</span>, lon:<span id="lon1">{{ conten.lon }}</span></h3>-->
-    <!--<h3>address :  {{ conten.address }}</h3>-->
-    <!--<h3>members :  {{ conten.number }}</h3>-->
-    <!--<h3>date :  {{ conten.date }}</h3>-->
-
-        <!--{% endfor %}-->
-            <!--{% if message %}-->
-                <!--{{ message }}-->
-            <!--{% endif %}-->
-            <!--<form method="POST">-->
-                <!--{% csrf_token %}-->
-                <!--<center>-->
-
-                <!--yes: <input type="radio" name="choice" value="yes"><br><br>-->
-                <!--no: <input type="radio" name="choice" value="no"><br><br>-->
-                <!--<button type="submit">submit</button>-->
-                 <!--</center>-->
-
-
-<!--<br><br>-->
-<!--<div id="map"></div>-->
-        <!--comment <input type="text" name="comment" maxlength="500"><br><br>-->
-        <!--<button type="submit">submit</button><br><br>-->
-
-        <!--</form>-->
-
-    <!--<script>-->
-<!--// Initialize and add the map-->
-<!--function initMap() {-->
-    <!--var la = document.getElementById('lat1').innerHTML;-->
-	<!--var lo = document.getElementById('lon1').innerHTML;-->
-
-        <!--var latlng = {lat: parseFloat(la), lng: parseFloat(lo)};-->
-  <!--var loc = {lat: parseFloat(la), lng: parseFloat(lo)};-->
-  <!--// The map, centered at Uluru-->
-  <!--var map = new google.maps.Map(-->
-      <!--document.getElementById('map'), {zoom: 14, center: loc});-->
-  <!--// The marker, positioned at Uluru-->
-  <!--var marker = new google.maps.Marker({position: loc, map: map});-->
-<!--}-->
-    <!--</script>-->
-    <!--&lt;!&ndash;Load the API from the specified URL-->
-    <!--* The async attribute allows the browser to render the page while the API loads-->
-    <!--* The key parameter will contain your own API key (which is not needed for this tutorial)-->
-    <!--* The callback parameter executes the initMap() function-->
-    <!--&ndash;&gt;-->
-    <!--<script async defer-->
-    <!--src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBoxHIV4EUz3PsPOwB_ehuLLDu4OE0ELLc&callback=initMap">-->
-    <!--</script>-->
-
-<!--</body>-->
-
-<!--</html>-->
-
+                    </div>
 {% endblock %}
