--- a/community/templates/community/my-group.html
+++ b/community/templates/community/my-group.html
@@ -1,6 +1,8 @@
-{% extends 'community/base/login-navbar.html' %}
+{% extends 'community/base/login-navbar-mdbs.html' %}
     {% block title %}my groups{% endblock %}
     {% block content %}
+                    <div class="container">
+
     <br><br>
     <br>
 <div class="jumbotron text-center">
@@ -94,4 +96,5 @@
     </center>
     {% endif %}
 </div>
+                    </div>
 {% endblock %}
